BREAKING CHANGE: remove unused code that was indirectly deprecated by removing shallow field by field comparison