@@ -21,9 +21,6 @@ import static java.util.stream.Collectors.toCollection;
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 import static org.assertj.core.error.ShouldBeEqual.shouldBeEqual;
-import static org.assertj.core.error.ShouldBeEqualByComparingFieldByFieldRecursively.shouldBeEqualByComparingFieldByFieldRecursive;
-import static org.assertj.core.error.ShouldBeEqualByComparingOnlyGivenFields.shouldBeEqualComparingOnlyGivenFields;
-import static org.assertj.core.error.ShouldBeEqualToIgnoringFields.shouldBeEqualToIgnoringGivenFields;
 import static org.assertj.core.error.ShouldBeExactlyInstanceOf.shouldBeExactlyInstance;
 import static org.assertj.core.error.ShouldBeIn.shouldBeIn;
 import static org.assertj.core.error.ShouldBeInstance.shouldBeInstance;
@@ -50,7 +47,6 @@ import static org.assertj.core.error.ShouldNotHaveSameClass.shouldNotHaveSameCla
 import static org.assertj.core.error.ShouldNotHaveSameHashCode.shouldNotHaveSameHashCode;
 import static org.assertj.core.error.ShouldNotHaveToString.shouldNotHaveToString;
 import static org.assertj.core.internal.CommonValidations.checkTypeIsNotNull;
-import static org.assertj.core.internal.DeepDifference.determineDifferences;
 import static org.assertj.core.util.Lists.list;
 import static org.assertj.core.util.Lists.newArrayList;
 import static org.assertj.core.util.Preconditions.checkArgument;
@@ -71,7 +67,6 @@ import org.assertj.core.api.comparisonstrategy.ComparatorBasedComparisonStrategy
 import org.assertj.core.api.comparisonstrategy.ComparisonStrategy;
 import org.assertj.core.api.comparisonstrategy.StandardComparisonStrategy;
 import org.assertj.core.error.GroupTypeDescription;
-import org.assertj.core.internal.DeepDifference.Difference;
 import org.assertj.core.util.introspection.FieldSupport;
 import org.assertj.core.util.introspection.IntrospectionError;
 import org.assertj.core.util.introspection.PropertyOrFieldSupport;
@@ -306,112 +301,6 @@ public class Objects {
     return false;
   }
 
-  public <A> void assertIsEqualToIgnoringNullFields(AssertionInfo info, A actual, A other,
-                                                    Map<String, Comparator<?>> comparatorByPropertyOrField,
-                                                    TypeComparators comparatorByType) {
-    assertNotNull(info, actual);
-    List<String> fieldsNames = new LinkedList<>();
-    List<Object> rejectedValues = new LinkedList<>();
-    List<Object> expectedValues = new LinkedList<>();
-    List<String> nullFields = new LinkedList<>();
-    for (Field field : getDeclaredFieldsIncludingInherited(actual.getClass())) {
-      if (!canReadFieldValue(field, actual)) continue;
-      String fieldName = field.getName();
-      Object otherFieldValue = getPropertyOrFieldValue(other, fieldName);
-      if (otherFieldValue == null) {
-        nullFields.add(fieldName);
-      } else {
-        Object actualFieldValue = getPropertyOrFieldValue(actual, fieldName);
-        if (!propertyOrFieldValuesAreEqual(actualFieldValue, otherFieldValue, fieldName,
-                                           comparatorByPropertyOrField, comparatorByType)) {
-          fieldsNames.add(fieldName);
-          rejectedValues.add(actualFieldValue);
-          expectedValues.add(otherFieldValue);
-        }
-      }
-    }
-    if (!fieldsNames.isEmpty())
-      throw failures.failure(info, shouldBeEqualToIgnoringGivenFields(actual, fieldsNames,
-                                                                      rejectedValues, expectedValues, nullFields));
-  }
-
-  public <A> void assertIsEqualToComparingOnlyGivenFields(AssertionInfo info, A actual, A other,
-                                                          Map<String, Comparator<?>> comparatorByPropertyOrField,
-                                                          TypeComparators comparatorByType,
-                                                          String... fields) {
-    assertNotNull(info, actual);
-    ByFieldsComparison byFieldsComparison = isEqualToComparingOnlyGivenFields(actual, other,
-                                                                              comparatorByPropertyOrField,
-                                                                              comparatorByType,
-                                                                              fields);
-    if (byFieldsComparison.isFieldsNamesNotEmpty())
-      throw failures.failure(info, shouldBeEqualComparingOnlyGivenFields(actual, byFieldsComparison.fieldsNames,
-                                                                         byFieldsComparison.rejectedValues,
-                                                                         byFieldsComparison.expectedValues,
-                                                                         newArrayList(fields)));
-  }
-
-  private <A> ByFieldsComparison isEqualToComparingOnlyGivenFields(A actual, A other,
-                                                                   Map<String, Comparator<?>> comparatorByPropertyOrField,
-                                                                   TypeComparators comparatorByType,
-                                                                   String[] fields) {
-    List<String> rejectedFieldsNames = new LinkedList<>();
-    List<Object> expectedValues = new LinkedList<>();
-    List<Object> rejectedValues = new LinkedList<>();
-    for (String fieldName : fields) {
-      Object actualFieldValue = getPropertyOrFieldValue(actual, fieldName);
-      Object otherFieldValue = getPropertyOrFieldValue(other, fieldName);
-      if (!propertyOrFieldValuesAreEqual(actualFieldValue, otherFieldValue, fieldName, comparatorByPropertyOrField,
-                                         comparatorByType)) {
-        rejectedFieldsNames.add(fieldName);
-        expectedValues.add(otherFieldValue);
-        rejectedValues.add(actualFieldValue);
-      }
-    }
-    return new ByFieldsComparison(rejectedFieldsNames, expectedValues, rejectedValues);
-  }
-
-  public <A> void assertIsEqualToIgnoringGivenFields(AssertionInfo info, A actual, A other,
-                                                     Map<String, Comparator<?>> comparatorByPropertyOrField,
-                                                     TypeComparators comparatorByType, String... fields) {
-    assertNotNull(info, actual);
-    ByFieldsComparison byFieldsComparison = isEqualToIgnoringGivenFields(actual, other, comparatorByPropertyOrField,
-                                                                         comparatorByType, fields);
-    if (byFieldsComparison.isFieldsNamesNotEmpty())
-      throw failures.failure(info, shouldBeEqualToIgnoringGivenFields(actual, byFieldsComparison.fieldsNames,
-                                                                      byFieldsComparison.rejectedValues,
-                                                                      byFieldsComparison.expectedValues,
-                                                                      newArrayList(fields)));
-  }
-
-  private <A> ByFieldsComparison isEqualToIgnoringGivenFields(A actual, A other,
-                                                              Map<String, Comparator<?>> comparatorByPropertyOrField,
-                                                              TypeComparators comparatorByType,
-                                                              String[] givenIgnoredFields) {
-    Set<Field> declaredFieldsIncludingInherited = getDeclaredFieldsIncludingInherited(actual.getClass());
-    List<String> fieldsNames = new LinkedList<>();
-    List<Object> expectedValues = new LinkedList<>();
-    List<Object> rejectedValues = new LinkedList<>();
-    Set<String> ignoredFields = newLinkedHashSet(givenIgnoredFields);
-    for (Field field : declaredFieldsIncludingInherited) {
-      // ignore private field if user has decided not to use them in comparison
-      String fieldName = field.getName();
-      if (ignoredFields.contains(fieldName) || !canReadFieldValue(field, actual)) {
-        continue;
-      }
-      Object actualFieldValue = getPropertyOrFieldValue(actual, fieldName);
-      Object otherFieldValue = getPropertyOrFieldValue(other, fieldName);
-
-      if (!propertyOrFieldValuesAreEqual(actualFieldValue, otherFieldValue, fieldName,
-                                         comparatorByPropertyOrField, comparatorByType)) {
-        fieldsNames.add(fieldName);
-        rejectedValues.add(actualFieldValue);
-        expectedValues.add(otherFieldValue);
-      }
-    }
-    return new ByFieldsComparison(fieldsNames, expectedValues, rejectedValues);
-  }
-
   @SuppressWarnings({ "unchecked", "rawtypes" })
   static boolean propertyOrFieldValuesAreEqual(Object actualFieldValue, Object otherFieldValue, String fieldName,
                                                Map<String, Comparator<?>> comparatorByPropertyOrField,
@@ -467,17 +356,6 @@ public class Objects {
     }
   }
 
-  public <A> void assertIsEqualToComparingFieldByFieldRecursively(AssertionInfo info, Object actual, Object other,
-                                                                  Map<String, Comparator<?>> comparatorByPropertyOrField,
-                                                                  TypeComparators comparatorByType) {
-    assertNotNull(info, actual);
-    List<Difference> differences = determineDifferences(actual, other, comparatorByPropertyOrField, comparatorByType);
-    if (!differences.isEmpty()) {
-      throw failures.failure(info, shouldBeEqualByComparingFieldByFieldRecursive(actual, other, differences,
-                                                                                 info.representation()));
-    }
-  }
-
   private <A> Object getPropertyOrFieldValue(A a, String fieldName) {
     return PropertyOrFieldSupport.COMPARISON.getValueOf(fieldName, a);
   }
@@ -506,20 +384,6 @@ public class Objects {
                                  .collect(toCollection(LinkedHashSet::new));
   }
 
-  public boolean areEqualToIgnoringGivenFields(Object actual, Object other,
-                                               Map<String, Comparator<?>> comparatorByPropertyOrField,
-                                               TypeComparators comparatorByType, String... fields) {
-    return isEqualToIgnoringGivenFields(actual, other, comparatorByPropertyOrField, comparatorByType,
-                                        fields).isFieldsNamesEmpty();
-  }
-
-  public boolean areEqualToComparingOnlyGivenFields(Object actual, Object other,
-                                                    Map<String, Comparator<?>> comparatorByPropertyOrField,
-                                                    TypeComparators comparatorByType, String... fields) {
-    return isEqualToComparingOnlyGivenFields(actual, other, comparatorByPropertyOrField, comparatorByType,
-                                             fields).isFieldsNamesEmpty();
-  }
-
   public <A> void assertHasFieldOrProperty(AssertionInfo info, A actual, String name) {
     assertNotNull(info, actual);
     try {
@@ -541,13 +405,13 @@ public class Objects {
   public <A> void assertHasOnlyFields(AssertionInfo info, A actual, String... names) {
     assertNotNull(info, actual);
     checkArgument(names != null, "Given fields/properties are null");
-    List<String> expectedFields = stream(names).sorted().collect(toList());
+    List<String> expectedFields = stream(names).sorted().toList();
     Field[] declaredFields = actual.getClass().getDeclaredFields();
     List<String> actualFields = stream(declaredFields).filter(field -> !isStatic(field.getModifiers()))
                                                       .filter(field -> !field.isSynthetic())
                                                       .map(Field::getName)
                                                       .sorted()
-                                                      .collect(toList());
+                                                      .toList();
     if (!expectedFields.equals(actualFields)) {
       List<String> fieldsNotFound = stream(names).filter(name -> !actualFields.contains(name)).collect(toList());
       List<String> extraFields = actualFields.stream()
@@ -572,30 +436,6 @@ public class Objects {
     requireNonNull(other, "The object used to compare actual's hash code with should not be null");
     if (actual.hashCode() == other.hashCode())
       throw failures.failure(info, shouldNotHaveSameHashCode(actual, other));
-  }
-
-  private static class ByFieldsComparison {
-
-    private final List<String> fieldsNames;
-    private final List<Object> expectedValues;
-    private final List<Object> rejectedValues;
-
-    private ByFieldsComparison(final List<String> fieldsNames,
-                               final List<Object> expectedValues,
-                               final List<Object> rejectedValues) {
-      this.fieldsNames = fieldsNames;
-      this.expectedValues = expectedValues;
-      this.rejectedValues = rejectedValues;
-    }
-
-    private boolean isFieldsNamesEmpty() {
-      return fieldsNames.isEmpty();
-    }
-
-    private boolean isFieldsNamesNotEmpty() {
-      return !isFieldsNamesEmpty();
-    }
-
   }
 
   private void throwAsRuntime(Throwable ex) {
